--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "urlsafe-base64": "~>0.0.2",
     "underscore": "~>1.5.1",
     "sync": "*",
+    "async": "*",
     "cli-color": "~>0.2.3",
     "lazy": "~>1.0.11",
     "hash_file": "*",
@@ -24,6 +25,7 @@
     "test": "mocha -t 0 --reporter nyan"
   },
   "directories": {
+    "doc": "doc",
     "lib": "lib",
     "example": "examples",
     "test": "test"
@@ -33,9 +35,9 @@
   },
   "repository" : {
         "type" : "git",
-        "url" : "git://github.com/levitate/levitate.git"
+        "url" : "git://github.com/levitateplatform/levitate.git"
   },
-  "bugs": {"url": "http://github.com/levitate/levitate/issues"},
+  "bugs": {"url": "http://github.com/levitateplatform/levitate/issues"},
   "keywords": [
     "levitate",
     "exploit",
@@ -47,7 +49,7 @@
   "licenses" : [
     {
       "type" : "MIT",
-      "url" : "http://github.com/levitate/levitate/raw/master/LICENSE"
+      "url" : "http://github.com/levitateplatform/levitate/raw/master/LICENSE"
     }
   ],
   "name": "levitate",
